Document card actions cleanup + added W3C export menu option

--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -13,6 +13,7 @@
   "Open document in new tab": "In neuem Tab öffnen",
   "Export TEI file": "TEI/XML exportieren",
   "Export PDF file": "PDF exportieren",
+  "Export Annotations as W3C/JSONLD": "Annotationen als W3C/JSONLD exportieren",
   "Public annotations only": "Nur öffentliche Annotationen",
   "Include my private annotations": "Inkl. meiner privaten Annotationen",
   "Export Annotations": "Annotationen exportieren",
