--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -13,6 +13,7 @@
   "Open document in new tab": "Open document in new tab",
   "Export TEI file": "Export TEI file",
   "Export PDF file": "Export PDF file",
+  "Export Annotations as W3C/JSONLD": "Export Annotations as W3C/JSONLD",
   "Public annotations only": "Export public annotations only",
   "Include my private annotations": "Include my private annotations",
   "Export Annotations": "Export Annotations",
