--- a/src/i18n/de/project-settings.json
+++ b/src/i18n/de/project-settings.json
@@ -2,13 +2,15 @@
   "Project Settings": "Projekteinstellungen",
   "Tagging Vocabulary": "Tag-Vokabular",
   "Tag": "Tag",
+  "ID": "ID",
   "Color": "Farbe",
   "You can pre-define a tagging vocabulary": "Begriffe aus dem Tag-Vokabular werden Benutzern automatisch als Vorschläge angezeigt, wenn sie neue Tags erstellen. Vokabular-Begriffe können mit einer ID (z.B. einem alphanumerischen Code oder einer URI) und einer fixen Farbe verknüpft werden. Achtung: Benutzer können auch weiterhin eigene Tags (ohne ID oder fixe Farbe) verwenden.",
   "No tagging vocabulary": "Kein Tag-Vokabular festgelegt",
-  "Add vocabulary terms below": "Füge Begriffe zum Vokabular hinzu, indem du sie in das Textfeld einfügst (ein Begriff pro Zeile).",
+  "Add vocabulary terms below": "Füge Begriffe zum Vokabular hinzu, indem du sie in das Textfeld einfügst (ein Begriff pro Zeile). Optional kannst Du dem Tag eine ID oder URI durch Komma getrennt zuweisen.",
   "Clear All": "Alle Löschen",
   "Save Changes": "Änderungen Speichern",
   "Add to Vocabulary": "Zum Vokabular Hinzufügen",
+  "VOCABULARY_PLACEHOLDER": "Tag A\nTag B\nTag C,tag-c-id\nTag D,https://www.example.com/tag-d\n...",
   "Error loading tag vocabulary.": "Fehler beim Laden des Tag-Vokabulars.",
   "Error saving tag vocabulary.": "Fehler beim Speichern des Tag-Vokabulars.",
   "Something went wrong": "Etwas ist schiefgelaufen",
