--- a/src/i18n/en/project-settings.json
+++ b/src/i18n/en/project-settings.json
@@ -2,13 +2,15 @@
   "Project Settings": "Project Settings",
   "Tagging Vocabulary": "Tagging Vocabulary",
   "Tag": "Tag",
+  "ID": "ID",
   "Color": "Color",
   "You can pre-define a tagging vocabulary": "Terms defined in the tagging vocabulary are automatically suggested to users when they create new tags. Vocabulary terms can be associated with an ID (e.g. an alphanumberic code or URI) and a fixed color. Note that users will still be able to create their own custom tags (without ID or fixed color) in the annotation interface.",
   "No tagging vocabulary": "No tagging vocabulary defined",
-  "Add vocabulary terms below": "Add terms to the vocabulary by pasting into the text field (one term per line).",
+  "Add vocabulary terms below": "Add terms to the vocabulary by pasting into the text field (one term per line). Optionally, assign an ID or URI to the tag separated by comma.",
   "Clear All": "Clear All",
   "Save Changes": "Save Changes",
   "Add to Vocabulary": "Add to Vocabulary",
+  "VOCABULARY_PLACEHOLDER": "Tag A\nTag B\nTag C,tag-c-id\nTag D,https://www.example.com/tag-d\n...",
   "Error loading tag vocabulary.": "Error loading tag vocabulary.",
   "Error saving tag vocabulary.": "Error saving tag vocabulary.",
   "Name and Access Settings": "Name and Access Settings",
