--- a/src/i18n/en/project-settings.json
+++ b/src/i18n/en/project-settings.json
@@ -2,7 +2,7 @@
   "Project Settings": "Project Settings",
   "Tagging Vocabulary": "Tagging Vocabulary",
   "Tag": "Tag",
-  "ID": "ID",
+  "ID": "ID (optional)",
   "Color": "Color",
   "You can pre-define a tagging vocabulary": "Terms defined in the tagging vocabulary are automatically suggested to users when they create new tags. Vocabulary terms can be associated with an ID (e.g. an alphanumberic code or URI) and a fixed color. Note that users will still be able to create their own custom tags (without ID or fixed color) in the annotation interface.",
   "No tagging vocabulary": "No tagging vocabulary defined",
@@ -10,7 +10,7 @@
   "Clear All": "Clear All",
   "Save Changes": "Save Changes",
   "Add to Vocabulary": "Add to Vocabulary",
-  "VOCABULARY_PLACEHOLDER": "Tag A\nTag B\nTag C,tag-c-id\nTag D,https://www.example.com/tag-d\n...",
+  "VOCABULARY_PLACEHOLDER": "Lion\nBird\nDolphin, https://www.wikidata.org/wiki/Q7369\n...",
   "Error loading tag vocabulary.": "Error loading tag vocabulary.",
   "Error saving tag vocabulary.": "Error saving tag vocabulary.",
   "Name and Access Settings": "Name and Access Settings",
