--- a/src/i18n/en/project-settings.json
+++ b/src/i18n/en/project-settings.json
@@ -37,5 +37,6 @@
   "Right panel will be closed by default when opening a document": "Right panel will be closed by default when opening a document",
   "Right panel will display annotations when opening a document": "Right panel will display annotations when opening a document",
   "Right panel will display notes when opening a document": "Right panel will display notes when opening a document",
-  "Are you sure you want to lock this project?": "Are you sure you want to lock this project?"
+  "Are you sure you want to lock this project?": "Are you sure you want to lock this project?",
+  "Available Plugins": "Available Plugins"
 }
