--- a/src/i18n/de/dashboard-projects.json
+++ b/src/i18n/de/dashboard-projects.json
@@ -101,6 +101,5 @@
   "All Projects": "Alle Projekte",
   "Select project(s) to add to group": "Projekt(e) auswählen",
   "Add projects to group": "Projekt zu ${name} hinzufügen",
-  "Successfully updated projects in group": "Projekte in ${name} wurden aktualisiert",
-  "Acknowledge": "Acknowledge"
+  "Successfully updated projects in group": "Projekte in ${name} wurden aktualisiert"
 }
