--- a/src/i18n/en/notifications.json
+++ b/src/i18n/en/notifications.json
@@ -6,5 +6,7 @@
   "Accept": "Accept",
   "Ignore": "Ignore",
   "Confirmed-student": "<strong>${project}</strong> has been added to your Dashboard. You will find it 'My Projects'.",
-  "Confirmed-creator": "<strong>${project}</strong> has been added to your Dashboard. You will find it 'Shared with me'."
+  "Confirmed-creator": "<strong>${project}</strong> has been added to your Dashboard. You will find it 'Shared with me'.",
+  "Select Projects": "Select Projects",
+  "Acknowledge": "Acknowledge"
 }
