Added DE labels

--- a/src/i18n/de/notifications.json
+++ b/src/i18n/de/notifications.json
@@ -7,6 +7,6 @@
   "Ignore": "Ignorieren",
   "Confirmed-student": "<strong>${project}</strong> wurde deinem Dashboard zugefügt. Du findest es unter 'Meine Projekte'.",
   "Confirmed-creator": "<strong>${project}</strong> wurde deinem Dashboard zugefügt. Du findest es unter 'Mit mir geteilt'.",
-  "Select Projects": "Select Projects",
-  "Acknowledge": "Acknowledge"
+  "Select Projects": "Projekte auswählen",
+  "Acknowledge": "Bestätigen"
 }
