Basic collection management (#409)

--- a/src/i18n/de/a11y.json
+++ b/src/i18n/de/a11y.json
@@ -63,5 +63,6 @@
   "enter user email address": "Benutzer-E-Mail-Adresse eingeben",
   "select users access level": "Berechtigungsstufe auswählen",
   "example of invite users spreadsheet": "Beispiel für eine Einladungs-Tabelle",
-  "edit document metadata": "Dokument-Metadaten bearbeiten"
+  "edit document metadata": "Dokument-Metadaten bearbeiten",
+  "collection management": "Sammlungsverwaltung"
 }
