--- a/src/i18n/de/account-menu.json
+++ b/src/i18n/de/account-menu.json
@@ -3,5 +3,6 @@
   "Help": "Hilfe",
   "Sign out": "Logout",
   "Users": "Benutzer",
-  "Site Administration": "Administration"
+  "Site Administration": "Administration",
+  "Collections": "Sammlungen"
 }
