--- a/src/i18n/en/a11y.json
+++ b/src/i18n/en/a11y.json
@@ -67,5 +67,6 @@
   "enter user email address": "enter user email address",
   "select users access level": "select users access level",
   "example of invite users spreadsheet": "example of invite users spreadsheet",
-  "edit document metadata": "edit document metadata"
+  "edit document metadata": "edit document metadata",
+  "collection management": "collection management"
 }
