--- a/src/i18n/en/account-menu.json
+++ b/src/i18n/en/account-menu.json
@@ -3,5 +3,6 @@
   "Help": "Help",
   "Sign out": "Sign out",
   "Users": "Users",
-  "Site Administration": "Site Administration"
+  "Site Administration": "Site Administration",
+  "Collections": "Collections"
 }
