Minor DE label tweaks

--- a/src/i18n/de/collection-management.json
+++ b/src/i18n/de/collection-management.json
@@ -2,7 +2,7 @@
   "actions": "Aktionen",
   "Are you sure?": "Bist Du sicher?",
   "Are you sure you want to delete this document?": "Bist Du sicher dass Du dieses Dokument aus der Sammlung entfernen willst? Dokumente können nur entfernt werden, wenn sie in in keinem aktiven Projekt verwendet werden.",
-  "Author/Artist": "Author/Artist",
+  "Author/Artist": "Author/Künstler",
   "Back to Collections": "Zurück zu Sammlungen",
   "Back to Projects": "Zurück zu Projekte",
   "Cancel": "Abbrechen",
@@ -23,7 +23,7 @@
   "Date Updated": "Aktualisierungsdatum",
   "Delete document": "Dokument aus Sammlung entfernen",
   "Document has been updated.": "Das Dokument wurde aktualisiert.",
-  "Document Type": "Format",
+  "Document Type": "Typ",
   "Documents": "Dokumente",
   "Edit Collection": "Neue Sammlung Erstellen",
   "Edit collection settings.": "Sammlungseinstellungen bearbeiten.",
@@ -48,7 +48,7 @@
   "No documents matching search criteria": "Keine Dokumente entsprechen den Suchkriterien",
   "not_https": "HTTPS URL erforderlich",
   "Ok": "Ok",
-  "Paste URL to a IIIF manifest": "URL zu einem IIIF Bild- oder Presentation-Manifest",
+  "Paste URL to a IIIF manifest": "URL zu einem IIIF Image- oder Presentation-Manifest",
   "Please enter a valid IIIF manifest URL": "Bitte eine gültige IIIF Manifest URL eingeben",
   "Published Date": "Veröffentlicht",
   "remove this document from the collection": "Dieses Dokument aus der Sammlung entfernen",
