--- a/src/i18n/de/collection-management.json
+++ b/src/i18n/de/collection-management.json
@@ -2,7 +2,7 @@
   "actions": "Aktionen",
   "Are you sure?": "Bist Du sicher?",
   "Are you sure you want to delete this document?": "Bist Du sicher dass Du dieses Dokument aus der Sammlung entfernen willst? Dokumente können nur entfernt werden, wenn sie in in keinem aktiven Projekt verwendet werden.",
-  "Author/Artist": "Author/Künstler",
+  "Author/Artist": "Autor/Künstler",
   "Back to Collections": "Zurück zu Sammlungen",
   "Back to Projects": "Zurück zu Projekte",
   "Cancel": "Abbrechen",
