--- a/src/i18n/de/collection-management.json
+++ b/src/i18n/de/collection-management.json
@@ -1,7 +1,7 @@
 {
   "actions": "Aktionen",
   "Are you sure?": "Bist Du sicher?",
-  "Are you sure you want to delete this document?": "Bist Du sicher dass Du dieses Dokument aus der Sammlung entfernen willst? Dokumente können nur entfernt werden, wenn sie in in keinem aktiven Projekt verwendet werden.",
+  "Are you sure you want to remove the document from the collection? Only documents that are not used by active projects can be removed.": "Bist Du sicher dass Du dieses Dokument entfernen möchtest? Dokumente können nur entfernt werden, wenn sie in in keinem aktiven Projekt verwendet werden.",
   "Author/Artist": "Autor/Künstler",
   "Back to Collections": "Zurück zu Sammlungen",
   "Back to Projects": "Zurück zu Projekte",
@@ -13,6 +13,7 @@
   "Collection has been updated.": "Die Sammlung wurde aktualisiert.",
   "Could not create collection.": "Die Sammlung konnte nicht erstellt werden.",
   "Could not create the document.": "Das Dokument konnte nicht erstellt werden.",
+  "Could not delete the document.": "Konnte nicht gelöscht werden. Möglicherweise wird das Dokument noch in einem Projekt verwendet.",
   "Could not retrieve collection.": "Die Sammlung konnte nicht abgerufen werden.",
   "Could not retrieve collections.": "Die Sammlungen konnten nicht abgerufen werden.",
   "Could not update collection.": "Die Sammlung konnte nicht aktualisiert werden.",
@@ -22,6 +23,8 @@
   "Date Created": "Erstellungsdatum",
   "Date Updated": "Aktualisierungsdatum",
   "Delete document": "Dokument aus Sammlung entfernen",
+  "Deleted": "Entfernt",
+  "Document deleted successfully.": "Das Dokument wurde erfolgreich aus der Sammlung entfernt.",
   "Document has been updated.": "Das Dokument wurde aktualisiert.",
   "Document Type": "Typ",
   "Documents": "Dokumente",
