--- a/src/i18n/en/collection-management.json
+++ b/src/i18n/en/collection-management.json
@@ -1,7 +1,7 @@
 {
   "actions": "actions",
   "Are you sure?": "Are you sure?",
-  "Are you sure you want to delete this document?": "Are you sure you want to delete this document?",
+  "Are you sure you want to remove the document from the collection? Only documents that are not used by active projects can be removed.": "Are you sure you want to remove the document from the collection? Only documents that are not used by active projects can be removed.",
   "Author/Artist": "Author/Artist",
   "Back to Collections": "Back to Collections",
   "Back to Projects": "Back to Projects",
@@ -13,6 +13,7 @@
   "Collection has been updated.": "Collection has been updated.",
   "Could not create collection.": "Could not create collection.",
   "Could not create the document.": "Could not create the document.",
+  "Could not delete the document.": "Could not delete the document. Perhaps it is used in a current project?",
   "Could not retrieve collection.": "Could not retrieve collection.",
   "Could not retrieve collections.": "Could not retrieve collections.",
   "Could not update collection.": "Could not update collection.",
@@ -22,6 +23,8 @@
   "Date Created": "Date Created",
   "Date Updated": "Date Updated",
   "Delete document": "Delete document",
+  "Deleted": "Deleted",
+  "Document deleted successfully.": "Document removed successfully.",
   "Document has been updated.": "Document has been updated.",
   "Document Type": "Document Type",
   "Documents": "Documents",
