"Delete latest revision" in collections (#409)

--- a/src/i18n/de/collection-management.json
+++ b/src/i18n/de/collection-management.json
@@ -23,6 +23,7 @@
   "Date Created": "Erstellungsdatum",
   "Date Updated": "Aktualisierungsdatum",
   "Delete document": "Dokument aus Sammlung entfernen",
+  "Delete latest revision": "Neueste Version entfernen",
   "Deleted": "Entfernt",
   "Document deleted successfully.": "Das Dokument wurde erfolgreich aus der Sammlung entfernt.",
   "Document has been updated.": "Das Dokument wurde aktualisiert.",
