--- a/src/i18n/en/collection-management.json
+++ b/src/i18n/en/collection-management.json
@@ -23,6 +23,7 @@
   "Date Created": "Date Created",
   "Date Updated": "Date Updated",
   "Delete document": "Delete document",
+  "Delete latest revision": "Delete latest revision",
   "Deleted": "Deleted",
   "Document deleted successfully.": "Document removed successfully.",
   "Document has been updated.": "Document has been updated.",
