--- a/src/i18n/de/collection-management.json
+++ b/src/i18n/de/collection-management.json
@@ -1,6 +1,7 @@
 {
   "actions": "Aktionen",
   "Are you sure?": "Bist Du sicher?",
+  "Are you sure you want to remove the collection? Only collections with documents that are not used by active projects can be removed.": "Bist Du sicher dass Du die Sammlung entfernen möchtest? Eine Sammlung kann nur entfernt werden, wenn keine ihrer Dokumente in aktiven Projekten verwendet werden.",
   "Are you sure you want to remove the document from the collection? Only documents that are not used by active projects can be removed.": "Bist Du sicher dass Du dieses Dokument entfernen möchtest? Dokumente können nur entfernt werden, wenn sie in in keinem aktiven Projekt verwendet werden.",
   "Author/Artist": "Autor/Künstler",
   "Back to Collections": "Zurück zu Sammlungen",
@@ -8,11 +9,13 @@
   "Cancel": "Abbrechen",
   "cancel": "Abbrechen",
   "close": "Schliessen",
-  "Collection Management": "Sammlungsverwaltung",
+  "Collection deleted successfully.": "Die Sammlung wurde erfolgreich entfernt.",
   "Collection has been created.": "Die Sammlung wurde erstellt.",
   "Collection has been updated.": "Die Sammlung wurde aktualisiert.",
+  "Collection Management": "Sammlungsverwaltung",
   "Could not create collection.": "Die Sammlung konnte nicht erstellt werden.",
   "Could not create the document.": "Das Dokument konnte nicht erstellt werden.",
+  "Could not delete the collection.": "Konnte nicht gelöscht werden. Möglicherweise wird ein Dokument aus der Sammlung noch in einem Projekt verwendet.",
   "Could not delete the document.": "Konnte nicht gelöscht werden. Möglicherweise wird das Dokument noch in einem Projekt verwendet.",
   "Could not retrieve collection.": "Die Sammlung konnte nicht abgerufen werden.",
   "Could not retrieve collections.": "Die Sammlungen konnten nicht abgerufen werden.",
@@ -22,6 +25,7 @@
   "Create a collection of documents.": "Neue Sammlung von Dokumenten erstellen.",
   "Date Created": "Erstellungsdatum",
   "Date Updated": "Aktualisierungsdatum",
+  "Delete collection": "Sammlung entfernen",
   "Delete document": "Dokument aus Sammlung entfernen",
   "Delete latest revision": "Neueste Version entfernen",
   "Deleted": "Entfernt",
@@ -29,9 +33,10 @@
   "Document has been updated.": "Das Dokument wurde aktualisiert.",
   "Document Type": "Typ",
   "Documents": "Dokumente",
-  "Edit Collection": "Neue Sammlung Erstellen",
-  "Edit collection settings.": "Sammlungseinstellungen bearbeiten.",
+  "Edit Collection": "Sammlung bearbeiten",
+  "Edit collection metadata": "Metadaten der Sammlung bearbeiten",
   "Edit document metadata": "Metadaten bearbeiten",
+  "edit this collection's metadata": "Metadaten der Sammlung bearbeiten",
   "enter collection name": "Sammlungsnamen eingeben",
   "fetch_error": "Downloadfehler",
   "File upload": "Datei hochladen (unterstützte Formate: Text, TEI, PDF, Bild)",
@@ -45,6 +50,7 @@
   "invalid_manifest": "Kein gültiges IIIF Manifest",
   "invalid_url": "Ungültige URL",
   "Latest Revision": "Neueste Version",
+  "Menu actions for collection:": "Menüoptionen für die Sammlung:",
   "Menu actions for document:": "Menüoptionen für Dokument:",
   "Name": "Name",
   "No collections": "Keine Sammlungen",
@@ -56,6 +62,7 @@
   "Paste URL to a IIIF manifest": "URL zu einem IIIF Image- oder Presentation-Manifest",
   "Please enter a valid IIIF manifest URL": "Bitte eine gültige IIIF Manifest URL eingeben",
   "Published Date": "Veröffentlicht",
+  "remove this collection": "Diese Sammlung entfernen",
   "remove this document from the collection": "Dieses Dokument aus der Sammlung entfernen",
   "Revision Count": "Versionen",
   "Save": "Speichern",
