--- a/src/i18n/en/collection-management.json
+++ b/src/i18n/en/collection-management.json
@@ -1,6 +1,7 @@
 {
   "actions": "actions",
   "Are you sure?": "Are you sure?",
+  "Are you sure you want to remove the collection? Only collections with documents that are not used by active projects can be removed.": "Are you sure you want to remove the collection? Only collections with documents that are not used by active projects can be removed.",
   "Are you sure you want to remove the document from the collection? Only documents that are not used by active projects can be removed.": "Are you sure you want to remove the document from the collection? Only documents that are not used by active projects can be removed.",
   "Author/Artist": "Author/Artist",
   "Back to Collections": "Back to Collections",
@@ -8,11 +9,13 @@
   "Cancel": "Cancel",
   "cancel": "cancel",
   "close": "close",
-  "Collection Management": "Collection Management",
+  "Collection deleted successfully.": "Collection deleted successfully.",
   "Collection has been created.": "Collection has been created.",
   "Collection has been updated.": "Collection has been updated.",
+  "Collection Management": "Collection Management",
   "Could not create collection.": "Could not create collection.",
   "Could not create the document.": "Could not create the document.",
+  "Could not delete the collection.": "Could not delete the collection. Perhaps one of its documents is used in a current project?",
   "Could not delete the document.": "Could not delete the document. Perhaps it is used in a current project?",
   "Could not retrieve collection.": "Could not retrieve collection.",
   "Could not retrieve collections.": "Could not retrieve collections.",
@@ -22,6 +25,7 @@
   "Create a collection of documents.": "Create a collection of documents.",
   "Date Created": "Date Created",
   "Date Updated": "Date Updated",
+  "Delete collection": "Delete collection",
   "Delete document": "Delete document",
   "Delete latest revision": "Delete latest revision",
   "Deleted": "Deleted",
@@ -30,8 +34,9 @@
   "Document Type": "Document Type",
   "Documents": "Documents",
   "Edit Collection": "Edit Collection",
-  "Edit collection settings.": "Edit collection settings.",
+  "Edit collection metadata": "Edit collection metadata",
   "Edit document metadata": "Edit document metadata",
+  "edit this collection's metadata": "edit this collection's metadata",
   "enter collection name": "enter collection name",
   "fetch_error": "Could not download manifest",
   "File upload": "File upload (supported formats: text, TEI, PDF, image)",
@@ -45,6 +50,7 @@
   "invalid_manifest": "Not a valid IIIF manifest",
   "invalid_url": "Invalid URL",
   "Latest Revision": "Latest Revision",
+  "Menu actions for collection:": "Menu actions for collection:",
   "Menu actions for document:": "Menu actions for document:",
   "Name": "Name",
   "No collections": "No collections",
@@ -56,6 +62,7 @@
   "Paste URL to a IIIF manifest": "Paste URL to a IIIF image or presentation manifest",
   "Please enter a valid IIIF manifest URL": "Please enter a valid IIIF manifest URL",
   "Published Date": "Published Date",
+  "remove this collection": "remove this collection",
   "remove this document from the collection": "remove this document from the collection",
   "Revision Count": "Revision Count",
   "Save": "Save",
