Enforce only one upload for a revision (#409) (of a collection document)

--- a/src/i18n/de/collection-management.json
+++ b/src/i18n/de/collection-management.json
@@ -59,6 +59,7 @@
   "No documents matching search criteria": "Keine Dokumente entsprechen den Suchkriterien",
   "not_https": "HTTPS URL erforderlich",
   "Ok": "Ok",
+  "Only one document can be used as a revision.": "Nur ein Dokument kann als neue Version verwendet werden.",
   "Paste URL to a IIIF manifest": "URL zu einem IIIF Image- oder Presentation-Manifest",
   "Please enter a valid IIIF manifest URL": "Bitte eine gültige IIIF Manifest URL eingeben",
   "Published Date": "Veröffentlicht",
@@ -70,6 +71,7 @@
   "Search Documents": "Dokumente suchen",
   "Something went wrong": "Etwas ist schiefgelaufen",
   "Success": "Erfolgreich",
+  "Unsupported file format": "Nicht unterstütztes Dateiformat",
   "unsupported_manifest_type": "Nicht unterstützter Manifest-Typ",
   "Valid manifest:": "Gültiges Manifest:",
   "Validating manifest": "Validiere Manifest...",
