--- a/src/i18n/en/collection-management.json
+++ b/src/i18n/en/collection-management.json
@@ -59,6 +59,7 @@
   "No documents matching search criteria": "No documents matching search criteria",
   "not_https": "HTTPS URL required",
   "Ok": "Ok",
+  "Only one document can be used as a revision.": "Only one document can be used as a revision.",
   "Paste URL to a IIIF manifest": "Paste URL to a IIIF image or presentation manifest",
   "Please enter a valid IIIF manifest URL": "Please enter a valid IIIF manifest URL",
   "Published Date": "Published Date",
@@ -70,6 +71,7 @@
   "Search Documents": "Search Documents",
   "Something went wrong": "Something went wrong",
   "Success": "Success",
+  "Unsupported file format": "Unsupported file format",
   "unsupported_manifest_type": "Unsupported manifest type",
   "Valid manifest:": "Valid manifest:",
   "Validating manifest": "Validating manifest",
