--- a/src/i18n/de/collection-management.json
+++ b/src/i18n/de/collection-management.json
@@ -47,7 +47,7 @@
   "Import IIIF": "IIIF Importieren",
   "Import new revision": "Neue Version importieren",
   "Importing ${n} items": "Importiere ${n} Dateien",
-  "invalid_manifest": "Kein gültiges IIIF Manifest",
+  "invalid_manifest": "Ungültiges IIIF Manifest",
   "invalid_url": "Ungültige URL",
   "Latest Revision": "Neueste Version",
   "Menu actions for collection:": "Menüoptionen für die Sammlung:",
