Reuse/dedupe project-home i18n for collections ref #409

--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -27,7 +27,7 @@
   "Edit Document Metadata": "Dokumentmetadaten",
   "Title": "Titel",
   "Author": "Autor",
-  "Author/Artist": "Author/Artist",
+  "Author/Artist": "Autor/Künstler",
   "Publication date": "Publikationsdatum",
   "License": "Lizenz",
   "Version": "Version",
@@ -39,12 +39,12 @@
   "From IIIF image manifest": "IIIF Image Manifest importieren",
   "IIIF import hint": "Import von Einzelbildern (IIIF Image Manifest) oder Bilderserien (IIIF Presentation Manifest).",
   "Import IIIF": "IIIF Importieren",
-  "Paste URL to a IIIF manifest": "URL zu einem IIIF Bild- oder Presentation-Manifest",
+  "Paste URL to a IIIF manifest": "URL zu einem IIIF Image- oder Presentation-Manifest",
   "Please enter a valid IIIF manifest URL": "Bitte eine gültige IIIF Manifest URL eingeben",
   "invalid_url": "Ungültige URL",
   "not_https": "HTTPS URL erforderlich",
   "fetch_error": "Downloadfehler",
-  "invalid_manifest": "Kein gültiges IIIF Manifest",
+  "invalid_manifest": "Ungültiges IIIF Manifest",
   "unsupported_manifest_type": "Nicht unterstützter Manifest-Typ",
   "Validating manifest": "Validiere Manifest...",
   "Valid manifest:": "Gültiges Manifest:",
