--- a/src/i18n/de/collection-management.json
+++ b/src/i18n/de/collection-management.json
@@ -24,9 +24,9 @@
   "Document deleted successfully.": "Das Dokument wurde erfolgreich aus der Sammlung entfernt.",
   "Document has been updated.": "Das Dokument wurde aktualisiert.",
   "Document Type": "Typ",
-  "Edit Collection": "Sammlung bearbeiten",
-  "Edit collection metadata": "Metadaten der Sammlung bearbeiten",
-  "edit this collection's metadata": "Metadaten der Sammlung bearbeiten",
+  "Edit Collection Name": "Sammlungsnamen bearbeiten",
+  "Edit collection name": "Sammlungsnamen bearbeiten",
+  "edit this collection's name": "Sammlungsnamen bearbeiten",
   "enter collection name": "Sammlungsnamen eingeben",
   "ID": "ID",
   "Import": "In Sammlung importieren",
