--- a/src/i18n/en/collection-management.json
+++ b/src/i18n/en/collection-management.json
@@ -24,9 +24,9 @@
   "Document deleted successfully.": "Document removed successfully.",
   "Document has been updated.": "Document has been updated.",
   "Document Type": "Document Type",
-  "Edit Collection": "Edit Collection",
-  "Edit collection metadata": "Edit collection metadata",
-  "edit this collection's metadata": "edit this collection's metadata",
+  "Edit Collection Name": "Edit Collection Name",
+  "Edit collection name": "Edit collection name",
+  "edit this collection's name": "edit this collection's name",
   "enter collection name": "enter collection name",
   "ID": "ID",
   "Import": "Import Into Collection",
